# MGST

./: .gitignore  CLAUDE.md  MANIFEST.in  MGST_colab.ipynb  README.md  environment-dev.yml  environment.yml  pyproject.toml  setup.py
docs/: api.rst  conf.py  enhanced_exobiology_rules.md  index.rst  species_specific_stellar_filters.md  stratum_tectonicas_filter_differences.md  usage.rst
examples/: basic_clustering.py  custom_filters.py  spatial_prefiltering_examples.py
patterns/: all_systems.json  interesting_systems.json  supply_hub_1.json
scripts/: README.md  analyze_codex_structure_fixed.py  analyze_database_fields.py  analyze_species_conflicts.py  analyze_stellar_preferences.py  analyze_system_names.py  biological_analysis.py  build_indexed_database.py  build_lightweight_index.py  build_sector_database.py  build_sector_database_final.py  build_sector_database_improved.py  build_sector_database_memory_efficient.py  build_sector_database_optimal.py  build_sector_database_optimized.py  build_sector_database_optimized_fast.py  build_sector_database_parallel.py  build_sector_index.py  calculate_sector_statistics.py  comprehensive_genus_analysis.py  compress_sector_database.py  convert_codex_to_jsonl.py  create_test_sectors.py  create_test_systems.py  detailed_statistical_analysis.py  diagnose_field_mismatches.py  enrich_identified_sectors.py  extract_species_stellar_ranges.py  extract_systematic_codex.py  full_galaxy_stratum_bacterium_analysis.py  generate_enhanced_rulesets.py  generate_species_summaries.py  identify_species.py  organize_by_species.py  organize_entries.py  proximity_finder.py  quick_bio_analysis.py  reorganize_by_sector.py  reorganize_to_subsectors.py  statistical_bio_analysis.py  (+14 more)
src/mgst/: __init__.py  __version__.py
src/mgst/cli/: __init__.py  database.py  filter.py  main.py
src/mgst/configs/: __init__.py  base.py  binary_body_search.py  biological_landmarks.py  config_loader.py  exobiology.py  faction_search.py  high_value_exobiology.py  improved_exobiology.py  json_pattern.py  rule_based_exobiology_10m_selective.py  stellar_adapted_exobiology.py  temperature_range_exobiology.py
src/mgst/core/: __init__.py  clustering.py  filtering.py  json_pattern_matcher.py  pattern_search.py  routing.py  search_modes.py  spatial.py
src/mgst/data/: __init__.py  compressed_reader.py  converters.py  indexed_reader.py  loaders.py  validators.py
src/mgst/database/: __init__.py  builder.py  change_detector.py  downloader.py  schema.py  (+1 more)
tests/: conftest.py  test_spatial_enhancements.py
tests/fixtures/: sample_systems.json
tests/test_core/: __init__.py  test_clustering.py  test_routing.py
tests/test_data/: __init__.py  test_converters.py
tests/test_database/: __init__.py  test_change_detector.py  test_schema.py
(+3 files in other folders)
